<div data-ng-controller="demoCtrl">     <div class="row col-md-12">         <ul>             <li data-ng-repeat="x in users">                 {{ x.firstname + ', ' + x.lastname + ' ' + x.email }}             </li>         </ul>     </div>     <script>     console.log(process.env.OPENSHIFT_NODEJS_IP);     </script> </div>

--- a/public/partials/demo.html
+++ b/public/partials/demo.html
@@ -6,5 +6,8 @@
             </li>
         </ul>
     </div>
+    <script>
+    console.log(process.env.OPENSHIFT_NODEJS_IP);
+    </script>
 </div>
  
