--- a/views/partials/page/jsdefaults.ejs
+++ b/views/partials/page/jsdefaults.ejs
@@ -3,6 +3,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script>
     <script src="./javascripts/scripts.js"></script>
     <script src="./javascripts/app.js"></script>
     <script src="./javascripts/controllers.js"></script>
