--- a/public/partials/demo.html
+++ b/public/partials/demo.html
@@ -36,7 +36,7 @@
                 </tbody>
             </table>
             
-                    <uib-pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" rotate="false" data-ng-change="pageChanged()" num-pages="numPages" ></uib-pagination>
+                    <uib-pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" rotate="false" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" data-ng-change="pageChanged()" num-pages="numPages" ></uib-pagination>
                     
         </div>
         
