--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,10 @@
+/*For bootstrap IE 10 support on windows 8 and windows mobile 8*/
+@-webkit-viewport   { width: device-width; }
+@-moz-viewport      { width: device-width; }
+@-ms-viewport       { width: device-width; }
+@-o-viewport        { width: device-width; }
+@viewport           { width: device-width; }
+
 /*general styles*/
 body { padding-top: 50px; background:#000 url('/images/fractal.png') top center no-repeat; }
 .row { margin:0; }
