--- a/views/partials/page/header.ejs
+++ b/views/partials/page/header.ejs
@@ -15,11 +15,9 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ">
-                    <li data-ng-class="{active: isActive('/html')}" ><a href='/#/html' alt='' >html</a></li>
-                    <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>
-                    <li data-ng-class="{active: isActive('/php')}" ><a href='/#/php' alt=''>php</a></li>
-                    <li data-ng-class="{active: isActive('/bootstrap')}" ><a href='/#/bootstrap' alt=''>bootstrap</a></li>
-                    <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
+                    <li data-ng-class="{active: isActive('/php')}" ><a href='https://php-dngh.rhcloud.com/news' alt=''>news</a></li>
+                    <li data-ng-class="{active: isActive('/php')}" ><a href='https://php-dngh.rhcloud.com/images' alt=''>images</a></li>                    
+                    <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>                    <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
                 </ul>
             </div>
         </div>
