combined navigation with php site corrected

--- a/views/partials/page/header.ejs
+++ b/views/partials/page/header.ejs
@@ -17,7 +17,8 @@
                 <ul class="nav navbar-nav ">
                     <li data-ng-class="{active: isActive('/php')}" ><a href='https://php-dngh.rhcloud.com/news' alt=''>news</a></li>
                     <li data-ng-class="{active: isActive('/php')}" ><a href='https://php-dngh.rhcloud.com/images' alt=''>images</a></li>                    
-                    <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>                    <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
+                    <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>
+                    <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
                 </ul>
             </div>
         </div>
