--- a/views/partials/page/header.ejs
+++ b/views/partials/page/header.ejs
@@ -15,15 +15,14 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ">
+                    <!--
                     <li data-ng-class="{active: isActive('/php')}" ><a href='http://php-dngh.rhcloud.com/news' alt=''>news</a></li>
                     <li data-ng-class="{active: isActive('/php')}" ><a href='http://php-dngh.rhcloud.com/images' alt=''>images</a></li>                    
-                   
-                   <!--
+                    //-->
                     <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>
                     <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
-                    //-->
                 </ul>
-                <button class="btn btn-default" data-ng-click="location.href='http://php-dngh.rhcloud.com/news'" >Switch to PHP site</button>
+                <button class="btn btn-default navbar-btn" data-ng-click="location.href='http://php-dngh.rhcloud.com/news'" >Switch to PHP site</button>
             </div>
         </div>
     </nav>
