added home page took out background image

--- a/public/partials/demo.html
+++ b/public/partials/demo.html
@@ -1,4 +1,4 @@
-<div class="container" id="demo">
+<div class="container" id="appDemo">
     <div class="row col-md-12">
         <div class="well well-lg row col-md-4">
             <form data-ng-submit="createUser(formData)" class="form-group" id="createUsersForm">
