--- a/public/partials/mean.html
+++ b/public/partials/mean.html
@@ -1,7 +1,7 @@
     <div id="pageMean" data-ng-controller="meanCtrl" class="container">
         
         <div class="fullwidth center-block">
-            <h1>What do you mean?</h1>
+            <h1>What does MEAN mean?</h1>
             <h2>This website was created using the <strong>mean</strong> stack</h2>
             <h3>Mongodb Expressjs Angularjs Nodejs</h3>
             <div class="tile-block well">
