--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -1,18 +1,37 @@
-<div data-ng-controller="indexCtrl">
-    <div class="row col-md-4">
-        <ul>
-            <li data-ng-repeat="x in users">
-                {{ x.firstname + ', ' + x.lastname + ' ' + x.email }}
-            </li>
-        </ul>
-    </div>
-    <div class="row col-md-4">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, quo tempore perferendis reiciendis corrupti rerum tenetur cumque. Laudantium, nulla, explicabo, nesciunt, sed provident aliquid corporis veritatis aperiam quas officiis dolor.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, temporibus, repellat, unde, voluptas voluptate quam nam sit ex odit expedita voluptatem aperiam repudiandae aspernatur dolore enim asperiores qui! Culpa, nihil!
-    </div>
-    
-    <div class="row col-md-4">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, reprehenderit, nihil deserunt et impedit maxime quibusdam aut nemo necessitatibus distinctio vitae ipsam sunt obcaecati non unde ipsum magnam! Incidunt, at.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, quia, aliquid provident eius tenetur voluptas neque id porro ipsam quam aperiam vel nobis blanditiis placeat ut soluta voluptatem eos alias.
-    </div>
-</div>
+<section class="container" id="pageHome" data-ng-controller="indexCtrl">
+	<main class="row col-md-12 panel noborder text-center">
+                <h1 class="panel-heading">Welcome to the NodeJS section of my website</h1>
+                <p class="panel-body">I have split my website into two sections to demonstrate the use of different technologies.
+                This section makes use of Angular as well as internal API's.
+                </p>
+            <section class="row col-md-6">
+                <div class="panel noborder">
+                    <h2 class="panel-heading">Technical specifications</h2>
+                    <ul class="panel-body text-left">
+                        <li>Full MEAN stack (Mongo database, Express server framework, Angular client framework and NodeJS server)</li>
+                        <li>The mean stack uses solely Javascript for client and server side scripting making the process more consistent, that and the frameworks help speed up development </li>
+                        <li>HTML5 and CSS3</li>
+                        <li>Twitter bootstrap for a mobile first design approach to responsiveness</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="row col-md-6">
+                <div class="panel noborder">
+                    <h2 class="panel-heading">Technical requirements</h2>
+                    <ul class="panel-body text-left">
+                        <li>IE9 and above and all major browsers on desktop and mobile</li>
+                    </ul>
+                </div>
+            </section>
+            <table class="table">
+                <tr>
+                    <td class="img-wrapper"><img src="/images/nodejs.png" alt="Node javascript server" class="img-responsive center-block"></img></td>
+                    <td class="img-wrapper"><img src="/images/express.png" alt="Express server framework" class="img-responsive center-block"></img></td>
+                    <td class="img-wrapper"><img src="/images/angular.png" alt="Angular javascript client framework" class="img-responsive center-block"></img></td>      
+                    <td class="img-wrapper"><img src="/images/mongodb.png" alt="Mongo nosql database" class="img-responsive center-block"></img></td>
+                    <td class="img-wrapper"><img src="/images/bootstrap.png" alt="Twitter bootstrap" class="img-responsive center-block"></img></td>
+                    <td class="img-wrapper"><img src="/images/html5.png" alt="HTML5 markup language" class="img-responsive center-block"></img></td>
+                </tr>
+            </table>
+        </main>
+</section>
