--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,27 +6,55 @@
 @viewport           { width: device-width; }
 
 /*general styles*/
-body { padding-top: 50px; background:#000 url('/images/fractal.png') top center no-repeat; }
+body { padding-top: 50px; background-color:#000; }
 .row { margin:0; }
 .fullwidth { width:100%; }
 .table-hover tbody tr:hover { background-color:#fff; }
+.noborder{border:0;}
 
 /*styles required by angular-ui*/
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 /*header styles*/
-header { height:0px; width:100%; }
+header {
+    height:0px;
+    width:100%;
+}
 #navbar button{
     margin-left:20px;
 }
 
 /*footer styles*/
-footer { height:300px; width:100%; background:#083643; color:#fff; }
+footer {
+    height:300px;
+    width:100%;
+    background-color:#222;
+    color:#fff;
+}
 footer .row { padding:20px; }
 
 /*PAGES*/
 
 /*index page*/
+#pageHome{
+    color:#fff;
+}
+#pageHome .panel{
+    background-color:#333;
+}
+#pageHome main h1{
+    background-color:#222;
+    color:#aaa;    
+}
+#pageHome main h2{
+    background-color:#222;
+    color:#fff;    
+}
+
+#pageHome td{
+    vertical-align:middle;
+}
+
 
 /*mean*/
 #pageMean { 
@@ -44,7 +72,7 @@ footer .row { padding:20px; }
 /*php*/
 
 /*demo*/
-#demo {
+#appDemo {
     background-color:#eee;
     padding-top:20px;
 }
