little nav tweak

--- a/views/partials/page/header.ejs
+++ b/views/partials/page/header.ejs
@@ -22,7 +22,7 @@
                     <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>
                     <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
                 </ul>
-                <button class="btn btn-default navbar-btn" onclick="location.href='http://php-dngh.rhcloud.com/news'" >Switch to LAMP site</button>
+                <button class="btn btn-default navbar-btn" onclick="location.href='http://php-dngh.rhcloud.com'" >Switch to PHP site</button>
             </div>
         </div>
     </nav>
