--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -1,26 +1,38 @@
-<section class="container" id="pageHome" data-ng-controller="indexCtrl">
-	<main class="row col-md-12 panel noborder text-center">
-                <h1 class="panel-heading">Welcome to the NodeJS section of my website</h1>
-                <p class="panel-body">I have split my website into two sections to demonstrate the use of different technologies.
+<main id="pageHome" class="container " data-ng-controller="indexCtrl">
+    <section class="row col-md-12">
+        <div class="panel panel-primary text-center">
+                <header class="panel-heading">Welcome to the NodeJS section of my website</header>
+                <p class="panel-body">
+                I have split my website into two sections to demonstrate the use of different technologies.
                 This section makes use of Angular as well as internal API's.
                 </p>
             <section class="row col-md-6">
-                <div class="panel noborder">
-                    <h2 class="panel-heading">Technical specifications</h2>
-                    <ul class="panel-body text-left">
-                        <li>Full MEAN stack (Mongo database, Express server framework, Angular client framework and NodeJS server)</li>
-                        <li>The mean stack uses solely Javascript for client and server side scripting making the process more consistent, that and the frameworks help speed up development </li>
-                        <li>HTML5 and CSS3</li>
-                        <li>Twitter bootstrap for a mobile first design approach to responsiveness</li>
-                    </ul>
+                <div class="panel panel-primary">
+                    <header class="panel-heading">Technical specifications</header>
+                    <div class="panel-body text-left">
+                        <ul>
+                            <li>Full MEAN stack (Mongo database, Express server framework, Angular client framework and NodeJS server)</li>
+                            <li>The mean stack uses solely Javascript for client and server side scripting making the process more consistent, that and the frameworks help speed up development </li>
+                            <li>HTML5 and CSS3</li>
+                            <li>Twitter bootstrap for a mobile first design approach to responsiveness</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <section class="row col-md-6">
-                <div class="panel noborder">
-                    <h2 class="panel-heading">Technical requirements</h2>
-                    <ul class="panel-body text-left">
-                        <li>IE9 and above and all major browsers on desktop and mobile</li>
-                    </ul>
+                <div class="panel panel-primary">
+                    <header class="panel-heading">Technical requirements</header>
+                    <div class="panel-body text-left">
+                        <ul>
+                            <li>IE9 and above and all major browsers on desktop and mobile</li>
+                        </ul>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                    </div>
                 </div>
             </section>
             <table class="table">
@@ -33,5 +45,6 @@
                     <td class="img-wrapper"><img src="/images/html5.png" alt="HTML5 markup language" class="img-responsive center-block"></img></td>
                 </tr>
             </table>
-        </main>
-</section>
+        </div>
+    </section>
+</main>
