--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,10 +16,7 @@ body { padding-top: 50px; background-color:#000; }
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 /*header styles*/
-header {
-    height:0px;
-    width:100%;
-}
+
 #navbar button{
     margin-left:20px;
 }
@@ -42,15 +39,12 @@ footer .row { padding:20px; }
 #pageHome .panel{
     background-color:#333;
 }
-#pageHome main h1{
-    background-color:#222;
-    color:#aaa;    
+#pageHome .panel-heading{
+    background-color:#007BA7;
 }
-#pageHome main h2{
-    background-color:#222;
-    color:#fff;    
+#pageHome .panel-primary{
+    border-color:#007BA7;
 }
-
 #pageHome td{
     vertical-align:middle;
 }
