--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -1,8 +1,8 @@
 <main id="pageHome" class="container " data-ng-controller="indexCtrl">
     <section class="row col-md-12">
-        <div class="panel panel-primary text-center">
-                <header class="panel-heading">Welcome to the NodeJS section of my website</header>
-                <p class="panel-body">
+        <div class="text-center">
+                <header class="h1">Welcome to the NodeJS section of my website</header>
+                <p>
                 I have split my website into two sections to demonstrate the use of different technologies.
                 This section makes use of Angular as well as internal API's.
                 </p>
