--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ body { padding-top: 50px; background-color:#000; }
 
 /*footer styles*/
 footer {
-    height:300px;
+    min-height:300px;
     width:100%;
     background-color:#222;
     color:#fff;
@@ -37,16 +37,18 @@ footer .row { padding:20px; }
     color:#fff;
 }
 #pageHome .panel{
-    background-color:#333;
+    background-color:#222;
 }
 #pageHome .panel-heading{
-    background-color:#007BA7;
+    background-color:#3A5761;
+    border-color:#3A5761;
 }
 #pageHome .panel-primary{
-    border-color:#007BA7;
+    border-color:#3A5761;
 }
 #pageHome td{
     vertical-align:middle;
+    border:0;
 }
 
 
