fixed issue with news forms not submitting search term and headings indents

--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -1,10 +1,10 @@
-<div data-ng-controller="phpCtrl">
+<div data-ng-controller="dashboardCtrl">
     <div class="row col-md-4">
-    
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, rem nam ut tempora vero obcaecati error voluptatibus perferendis minima sequi fugiat optio dignissimos cupiditate quod qui nisi totam voluptatum similique.
     
     </div>
     <div class="row col-md-4">
-            
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda fuga vitae voluptate voluptatum doloremque. Voluptatem, rerum voluptas non delectus. Suscipit, provident deleniti cumque voluptates tenetur repellendus impedit odio quaerat vero.    
     </div>
     
     <div class="row col-md-4">
