couple of things needed correcting to make valid html5

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lag="en" data-ng-app="myWebsite">
+<html lang="en" data-ng-app="myWebsite">
   <head>
     <% include partials/page/head.ejs %>
   </head>
