--- a/views/partials/page/header.ejs
+++ b/views/partials/page/header.ejs
@@ -19,8 +19,8 @@
                     <li data-ng-class="{active: isActive('/php')}" ><a href='http://php-dngh.rhcloud.com/news' alt=''>news</a></li>
                     <li data-ng-class="{active: isActive('/php')}" ><a href='http://php-dngh.rhcloud.com/images' alt=''>images</a></li>                    
                     //-->
-                    <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean' alt=''>mean</a></li>
-                    <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo' alt=''>demo</a></li>
+                    <li data-ng-class="{active: isActive('/mean')}" ><a href='/#/mean'>mean</a></li>
+                    <li data-ng-class="{active: isActive('/demo')}" ><a href='/#/demo'>demo</a></li>
                 </ul>
                 <button class="btn btn-default navbar-btn" onclick="location.href='http://php-dngh.rhcloud.com'" >Switch to PHP site</button>
             </div>
