--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -1,14 +1,14 @@
-<main id="pageHome" class="container " data-ng-controller="indexCtrl">
-    <section class="row col-md-12">
-        <div class="text-center">
-                <header class="h1">Welcome to the NodeJS section of my website</header>
+<div id="pageHome" class="container " data-ng-controller="indexCtrl">
+    <main class="row col-md-12">
+        <section class="text-center">
+                <h1>Welcome to the NodeJS section of my website</h1>
                 <p>
                 I have split my website into two sections to demonstrate the use of different technologies.
                 This section makes use of Angular as well as internal API's.
                 </p>
-            <section class="row col-md-6">
-                <div class="panel panel-primary">
-                    <header class="panel-heading">Technical specifications</header>
+            <div class="row col-md-6">
+                <section class="panel panel-primary">
+                    <h2 class="panel-heading">Technical specifications</h2>
                     <div class="panel-body text-left">
                         <ul>
                             <li>Full MEAN stack (Mongo database, Express server framework, Angular client framework and NodeJS server)</li>
@@ -17,11 +17,11 @@
                             <li>Twitter bootstrap for a mobile first design approach to responsiveness</li>
                         </ul>
                     </div>
-                </div>
-            </section>
-            <section class="row col-md-6">
-                <div class="panel panel-primary">
-                    <header class="panel-heading">Technical requirements</header>
+                </section>
+            </div>
+            <div class="row col-md-6">
+                <section class="panel panel-primary">
+                    <h2 class="panel-heading">Technical requirements</h2>
                     <div class="panel-body text-left">
                         <ul>
                             <li>IE9 and above and all major browsers on desktop and mobile</li>
@@ -33,8 +33,8 @@
                         <br />
                         <br />
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
             <table class="table">
                 <tr>
                     <td class="img-wrapper"><img src="/images/nodejs.png" alt="Node javascript server" class="img-responsive center-block"></img></td>
@@ -46,5 +46,5 @@
                 </tr>
             </table>
         </div>
-    </section>
-</main>
+    </main>
+</div>
